Update the readme

--- a/kernel.ipynb
+++ b/kernel.ipynb
@@ -950,13 +950,23 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Training the Model\n",
+    "\n",
+    "Now that data is cleaned, let's train use a machine learning model to predict whether or not a person has diabetes."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "_uuid": "18ad50cff8d7f7ede2ba7341cc2d79ffd6c37431"
    },
    "source": [
     "# To do list:\n",
     "* Check the zero values in INSULINA e GROSSURA_PELE\n",
-    "* Try remove outliers with IQR\n"
+    "* Try remove outliers with IQR\n",
+    "* Try decision tree, Naive Bayes and SVM\n"
    ]
   },
   {
