Using Decision tree model

--- a/kernel.ipynb
+++ b/kernel.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 1,
    "metadata": {
     "_uuid": "0d12b76be005b3135e74d5a46caeca7c1f091528"
    },
@@ -170,7 +170,7 @@
        "4  43.1             2.288     33       1  "
       ]
      },
-     "execution_count": 44,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,6 +186,7 @@
     "\n",
     "# Loading the data\n",
     "data = pd.read_csv('data/dataset_treino.csv')\n",
+    "test_data = pd.read_csv('data/dataset_teste.csv')\n",
     "data.head(5)"
    ]
   },
@@ -200,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 2,
    "metadata": {
     "_uuid": "4a6bcb303d74b4ebaafe42126eae4b61d5f6ec24"
    },
@@ -259,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 3,
    "metadata": {
     "_uuid": "ff80d3e3743425e3e329b0978591fd9995126483"
    },
@@ -270,7 +271,7 @@
        "False"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -291,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 4,
    "metadata": {
     "_uuid": "b07404e445e74bbf16552e70b340ee2a25937a1a"
    },
@@ -470,7 +471,7 @@
        "max      1.000000  "
       ]
      },
-     "execution_count": 47,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -489,7 +490,7 @@
     "\n",
     "After read some papers about the variables in the dataset, I see that some columns can have a value very close to zero (e.g. *grossura_pele*), but others can't have a zero value. \n",
     "\n",
-    "The columns that can not hae \n",
+    "The columns that can not have a zero value. \n",
     "* glicose\n",
     "* pressao_sanguinea\n",
     "* bmi\n",
@@ -499,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 5,
    "metadata": {
     "_uuid": "577c5f9657841649947d115dcb0141c750c39790"
    },
@@ -532,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 6,
    "metadata": {
     "_uuid": "1c8cfd68a37e67c078b469b613df74f0f5d5fdf4"
    },
@@ -543,7 +544,7 @@
        "(564, 10)"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -569,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 7,
    "metadata": {
     "_uuid": "6b40c0deb9e7ccb0607c6810ff2739b019620e22"
    },
@@ -748,7 +749,7 @@
        "max      1.000000  "
       ]
      },
-     "execution_count": 50,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -772,7 +773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 8,
    "metadata": {
     "_uuid": "3798e41daeb1172be909514f032b4e915c4c4f5f"
    },
@@ -820,7 +821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -853,7 +854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -900,7 +901,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -920,7 +921,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -931,7 +932,7 @@
        "Name: classe, dtype: float64"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -954,7 +955,88 @@
    "source": [
     "# Training the Model\n",
     "\n",
-    "Now that data is cleaned, let's train use a machine learning model to predict whether or not a person has diabetes."
+    "Now that data is cleaned, let's train use a machine learning model to predict whether or not a person has diabetes.\n",
+    "\n",
+    "https://scikit-learn.org/stable/modules/tree.html"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Using Decision Tree"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy is  69.55\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "from sklearn import tree\n",
+    "\n",
+    "# Select the columns with features\n",
+    "features = ['num_gestacoes', 'glicose', 'pressao_sanguinea', 'grossura_pele', 'insulina', 'bmi', 'indice_historico', 'idade']\n",
+    "X = data_cleaned[features]\n",
+    "# Select the columns with labels\n",
+    "Y = data_cleaned['classe']\n",
+    "\n",
+    "# Perform the training and test 100 times with different seeds and compute the mean accuracy.\n",
+    "# Save results\n",
+    "acurrances = []\n",
+    "for i in range(100):    \n",
+    "    # Spliting Dataset into Test and Train\n",
+    "    X_train, X_test, y_train, y_test = train_test_split(X, Y, test_size=0.3, random_state=i)\n",
+    "\n",
+    "    # Create and train the model\n",
+    "    clf = tree.DecisionTreeClassifier(criterion = 'entropy', random_state=i)\n",
+    "    clf.fit(X_train,y_train)\n",
+    "\n",
+    "    # Performing predictions with test dataset\n",
+    "    y_pred = clf.predict(X_test)\n",
+    "    # Computing accuracy    \n",
+    "    acurrances.append(accuracy_score(y_test, y_pred)*100)\n",
+    "\n",
+    "print('Accuracy is ', np.mean(acurrances))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Performing the Prediction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create and train the model with all data\n",
+    "clf = tree.DecisionTreeClassifier(criterion = 'entropy', random_state=2)\n",
+    "clf.fit(data_cleaned[features], data_cleaned['classe'])\n",
+    "\n",
+    "# Get the kaggle test data\n",
+    "X_test = test_data[features]\n",
+    "# Make the prediction \n",
+    "prediction = clf.predict(X_test)\n",
+    "\n",
+    "# Add the predictions to the dataframe \n",
+    "test_data['classe'] = prediction\n",
+    "\n",
+    "# Create the submission file\n",
+    "test_data.loc[:,['id', 'classe']].to_csv('submission.csv', encoding='utf-8', index=False)"
    ]
   },
   {
@@ -966,7 +1048,8 @@
     "# To do list:\n",
     "* Check the zero values in INSULINA e GROSSURA_PELE\n",
     "* Try remove outliers with IQR\n",
-    "* Try decision tree, Naive Bayes and SVM\n"
+    "* Try decision tree, Naive Bayes and SVM\n",
+    "* Balance the dataset\n"
    ]
   },
   {
